--- a/Interpolation.ipynb
+++ b/Interpolation.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This is a [Jupyter](http://jupyter.org/) notebook using Python.  You can install Jupyter locally to edit and interact with this notebook.\n",
     "\n",
-    "# Interpolation and Regression\n",
+    "# Interpolation\n",
     "\n",
     "Interpolation and regression address the problem of approximating functions using their (possibly noisy) values at a finite set of points.  There is usually an underlying process from which the observed data are obtained, but this process is impractical to evaluate every time a function value is needed.  Examples of underlying processes include:\n",
     "\n",
