Add recent notebooks

--- a/Differentiation.ipynb
+++ b/Differentiation.ipynb
@@ -18,7 +18,8 @@
    "source": [
     "# Numerical differentiation\n",
     "\n",
-    "Suppose we want to apply Newton's method to a function that we know how to evaluate, but don't have code to differentiate.  This is often because it's difficult/error-prone to write or because the interface by which we call it does not support derivatives.  (Commercial packages often fall in this category.)"
+    "Suppose we want to apply Newton's method to a function that we know how to evaluate, but don't have code to differentiate.  This is often because it's difficult/error-prone to write or because the interface by which we call it does not support derivatives.  (Commercial packages often fall in this category.)  So we just have a black box function $f(x)$ and wish to approximate its derivative,\n",
+    "$$ f'(x) = \\lim_{h\\to 0} \\frac{f(x+h) - f(x)}{h} .$$"
    ]
   },
   {
@@ -29,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "2.297793622041411e-09"
+       "-3.221101531725168e-06"
       ]
      },
      "execution_count": 2,
@@ -38,10 +39,10 @@
     }
    ],
    "source": [
-    "def diff(f, x, epsilon=1e-5):\n",
-    "    return (f(x + epsilon) - f(x)) / epsilon\n",
+    "def diff(f, x, h=1e-5):\n",
+    "    return (f(x + h) - f(x)) / h\n",
     "\n",
-    "diff(np.sin, 0.7, 1e-8) - np.cos(0.7)"
+    "diff(np.sin, 0.7, 1e-5) - np.cos(0.7)"
    ]
   },
   {
@@ -88,8 +89,8 @@
    ],
    "source": [
     "x = 3.14/2\n",
-    "[(eps, diff(np.tan, x, eps) - 1/np.cos(x)**2)\n",
-    " for eps in [1e-14, 1e-12, 1e-10, 1e-8, 1e-6, 1e-4]]"
+    "[(h, diff(np.tan, x, h) - 1/np.cos(x)**2)\n",
+    " for h in [1e-14, 1e-12, 1e-10, 1e-8, 1e-6, 1e-4]]"
    ]
   },
   {
@@ -116,15 +117,15 @@
    ],
    "source": [
     "x = 1e4\n",
-    "[(eps, diff(np.log, x, eps) - 1/x)\n",
-    " for eps in [1e-14, 1e-12, 1e-10, 1e-8, 1e-6, 1e-4, 1e-2]]"
+    "[(h, diff(np.log, x, h) - 1/x)\n",
+    " for h in [1e-14, 1e-12, 1e-10, 1e-8, 1e-6, 1e-4, 1e-2]]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Automatically choosing a suitable $\\epsilon$"
+    "### Automatically choosing a suitable $h$"
    ]
   },
   {
@@ -302,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
